<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-12dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#ffffe1e1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvProdi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:text="Magister Terapan Ketahanan Pangan"
                        android:textColor="#ffec2d2d"
                        android:textSize="20sp" />

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#ffffe1e1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvAkreditasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:text="AKREDITASI :  B"
                        android:textColor="#ffec2d2d"
                        android:textSize="15sp" />

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#ffffe1e1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvjenjang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:text="Jenjang :  S2.Tr"
                        android:textColor="#ffec2d2d"
                        android:textSize="15sp" />

                </androidx.cardview.widget.CardView>



            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageProdi"
                        android:layout_width="280dp"
                        android:layout_height="280dp"
                        android:layout_gravity="end|center"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="-50dp"
                        android:background="@android:color/transparent"
                        android:elevation="5dp"
                        android:scaleType="centerCrop"
                        app:shapeAppearanceOverlay="@style/circularImageView"
                        app:srcCompat="@drawable/polinela" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-70dp"
                        android:layout_marginBottom="50dp"
                        app:cardBackgroundColor="#ffa000"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">


                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-80dp"
                        android:background="@drawable/bg_circle_radius_primary"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvVisi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="55dp"
                            android:textStyle="bold"
                            android:text="VISI PROGRAM STUDI"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="20dp"
                            android:justificationMode="inter_word"
                            android:text="@string/visiAgri1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                        <!--BUKA MISI-->
                        <TextView
                            android:id="@+id/tvMisi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textStyle="bold"
                            android:text="MISI"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/misiAgri1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/misiAgri2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/misiAgri3"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/misiAgri4"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="20dp"
                            android:justificationMode="inter_word"
                            android:text="@string/misiAgri5"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <!--TUTUP MISI-->

                        <TextView
                            android:id="@+id/tvTps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textStyle="bold"
                            android:text="TUJUAN PROGRAM STUDI"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/tpsAgri1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/tpsAgri2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/tpsAgri3"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/tpsAgri4"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/tpsAgri5"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


                        <TextView
                            android:id="@+id/tvSasaran"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textStyle="bold"
                            android:text="SASARAN PROGRAM STUDI"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/sasaranAgri1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/sasaranAgri2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/sasaranAgri3"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/sasaranAgri4"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>



                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>